--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     />
     <link rel="stylesheet" href="./css/modern-normalize.css" />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
 
   <body>
@@ -490,7 +491,8 @@
             />
           </label>
           <button class="submit-btn" type="submit">
-            Подписаться<svg class="footer-btn-icon">
+            Подписаться
+            <svg class="footer-btn-icon">
               <use href="./images/icons.svg#icon-telegram"></use>
             </svg>
           </button>
@@ -539,8 +541,8 @@
             </span>
           </label>
 
-          <label class="form-field"
-            ><span class="form-label">Комментарий</span>
+          <label class="form-field">
+            <span class="form-label">Комментарий</span>
             <textarea
               name="textarea"
               class="form-textarea"
