--- a/portfolio.html
+++ b/portfolio.html
@@ -12,6 +12,7 @@
     />
     <link rel="stylesheet" href="./css/modern-normalize.css" />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
     <!--верхняя линия-->
@@ -396,7 +397,8 @@
             />
           </label>
           <button class="submit-btn" type="submit">
-            Подписаться<svg class="footer-btn-icon">
+            Подписаться
+            <svg class="footer-btn-icon">
               <use href="./images/icons.svg#icon-telegram"></use>
             </svg>
           </button>
