--- a/portfolio.html
+++ b/portfolio.html
@@ -16,42 +16,46 @@
     <!--верхняя линия-->
     <header class="header">
       <div class="container">
-        <nav class="header-nav">
-          <a href="./index.html" lang="en" class="header-logo link">
+        <nav class="header-navigation">
+          <a href="./index.html" lang="en" class="logo header__logo link">
             Web
-            <span class="header-logo-studio">Studio</span>
+            <span class="header__logo--black">Studio</span>
           </a>
 
-          <ul class="header-nav-menu list">
-            <li class="header-nav-menu-item">
-              <a href="./index.html" class="header-nav-menu-link link">
+          <ul class="header-meny list">
+            <li class="header-meny__item">
+              <a href="./index.html" class="header-meny__link link">
                 Студия
               </a>
             </li>
-            <li class="header-nav-menu-item">
-              <a href="" class="header-nav-menu-link link current">Портфолио</a>
+            <li class="header-meny__item">
+              <a href="" class="header-meny__link link current">
+                Портфолио
+              </a>
             </li>
-            <li class="header-nav-menu-item">
-              <a href="" class="header-nav-menu-link link">Контакты</a>
+            <li class="header-meny__item">
+              <a href="" class="header-meny__link link">
+                Контакты
+              </a>
             </li>
           </ul>
         </nav>
 
         <ul class="header-contact list">
-          <li class="header-contact-item">
+          <li class="header-contact__item">
             <a
               href="mailto:info@devstudio.com"
-              class="header-contact-mailto link"
+              class="header-contact__link link"
             >
-              <svg class="icon-adress">
+              <svg class="icon-adress header-contact__icon">
                 <use href="./images/icons.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com
             </a>
           </li>
-          <li class="header-contact-item">
-            <a href="tel:+380961111111" class="header-contact-tel link">
-              <svg class="icon-adress">
+          <li class="header-contact__item">
+            <a href="tel:+380961111111" class="header-contact__link link">
+              <svg class="icon-adress header-contact__icon">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11
