--- a/portfolio.html
+++ b/portfolio.html
@@ -322,9 +322,9 @@
     <footer class="footer">
       <div class="container">
         <div>
-          <a href="./index.html" lang="en" class="footer-logo link">
+          <a href="./index.html" lang="en" class="logo footer__logo link">
             Web
-            <span class="footer-logo-studio">Studio</span>
+            <span class="logo__text footer__logo--white">Studio</span>
           </a>
           <address class="address">
             <ul class="footer-contact list">
@@ -354,33 +354,33 @@
             </ul>
           </address>
         </div>
-        <div class="footer-block">
-          <p class="footer-text">присоединяйтесь</p>
-          <ul class="social-list list">
-            <li class="social-item">
-              <a href="" class="social-link link">
-                <svg class="icon-social">
+        <div class="footer-social">
+          <p class="footer__text">присоединяйтесь</p>
+          <ul class="social__list list">
+            <li class="social-list__item">
+              <a href="" class="social-list__link link">
+                <svg class="social-list__icon">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-item">
-              <a href="" class="social-link link">
-                <svg class="icon-social">
+            <li class="social-list__item">
+              <a href="" class="social-list__link link">
+                <svg class="social-list__icon">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-item">
-              <a href="" class="social-link link">
-                <svg class="icon-social">
+            <li class="social-list__item">
+              <a href="" class="social-list__link link">
+                <svg class="social-list__icon">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-item">
-              <a href="" class="social-link link">
-                <svg class="icon-social">
+            <li class="social-list__item">
+              <a href="" class="social-list__link link">
+                <svg class="social-list__icon">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
@@ -394,7 +394,7 @@
             <input
               type="email"
               class="footer-input"
-              name="email"
+              name="mail"
               placeholder="E-mail"
             />
           </label>
