--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
         </div>
         <div class="footer-social">
           <p class="footer__text">присоединяйтесь</p>
-          <ul class="social__list list">
+          <ul class="social__list social-list__footer list">
             <li class="social-list__item">
               <a href="" class="social-list__link link">
                 <svg class="social-list__icon">
