--- a/index.html
+++ b/index.html
@@ -482,17 +482,17 @@
 
         <form class="mailings" name="mailings">
           <p class="footer__text">Подпишитесь на рассылку</p>
-          <label class="footer-label">
+          <label class="footer__label">
             <input
               type="email"
-              class="footer-input"
+              class="footer__input"
               name="mail"
               placeholder="E-mail"
             />
           </label>
-          <button class="submit-btn" type="submit">
+          <button class="footer__btn" type="submit">
             Подписаться
-            <svg class="footer-btn-icon">
+            <svg class="footer__btn-icon">
               <use href="./images/icons.svg#icon-telegram"></use>
             </svg>
           </button>
