--- a/portfolio.html
+++ b/portfolio.html
@@ -327,27 +327,27 @@
             <span class="logo__text footer__logo--white">Studio</span>
           </a>
           <address class="address">
-            <ul class="footer-contact list">
-              <li class="footer-address-item">
+            <ul class="footer-contact__list list">
+              <li class="footer-contact__item">
                 <a
                   href="https://goo.gl/maps/t8EjhzHjhEVSywwh8"
                   target="_blank"
                   rel="noopener noreferre"
-                  class="footer-address-link link"
+                  class="footer-contact__link link"
                 >
                   г. Киев, пр-т Леси Украинки, 26
                 </a>
               </li>
-              <li class="footer-address-item">
+              <li class="footer-contact__item">
                 <a
                   href="mailto:info@devstudio.com"
-                  class="footer-address-mailto link"
+                  class="footer-contact__mailto link"
                 >
                   info@devstudio.com
                 </a>
               </li>
-              <li class="footer-address-item">
-                <a href="tel:+380961111111" class="footer-address-tel link">
+              <li class="footer-contact__item">
+                <a href="tel:+380961111111" class="footer-contact__tel link">
                   +38 096 111 11 11
                 </a>
               </li>
@@ -389,18 +389,18 @@
         </div>
 
         <form class="mailings" name="mailings">
-          <p class="footer-text">Подпишитесь на рассылку</p>
-          <label class="footer-label">
+          <p class="footer__text">Подпишитесь на рассылку</p>
+          <label class="footer__label">
             <input
               type="email"
-              class="footer-input"
+              class="footer__input"
               name="mail"
               placeholder="E-mail"
             />
           </label>
-          <button class="submit-btn" type="submit">
+          <button class="footer__btn" type="submit">
             Подписаться
-            <svg class="footer-btn-icon">
+            <svg class="footer__btn-icon">
               <use href="./images/icons.svg#icon-telegram"></use>
             </svg>
           </button>
