--- a/portfolio.html
+++ b/portfolio.html
@@ -71,30 +71,30 @@
         <div class="container">
           <h1 hidden class="visually-hidden">Кнопки портфолио</h1>
           <ul class="list nav-button">
-            <li class="filtr-item">
-              <button class="filtr-btn" type="button">Все</button>
+            <li class="filtr__item">
+              <button class="filtr__btn" type="button">Все</button>
             </li>
-            <li class="filtr-item">
-              <button class="filtr-btn" type="button">Веб-сайты</button>
+            <li class="filtr__item">
+              <button class="filtr__btn" type="button">Веб-сайты</button>
             </li>
-            <li class="filtr-item">
-              <button class="filtr-btn" type="button">Приложения</button>
+            <li class="filtr__item">
+              <button class="filtr__btn" type="button">Приложения</button>
             </li>
-            <li class="filtr-item">
-              <button class="filtr-btn" type="button">Дизайн</button>
+            <li class="filtr__item">
+              <button class="filtr__btn" type="button">Дизайн</button>
             </li>
-            <li class="filtr-item">
-              <button class="filtr-btn" type="button">Маркетинг</button>
+            <li class="filtr__item">
+              <button class="filtr__btn" type="button">Маркетинг</button>
             </li>
           </ul>
 
           <h2 hidden>Примеры работ</h2>
           <ul class="service list">
-            <li class="service-item">
-              <a class="service-link" href="">
-                <div class="jpg-product">
+            <li class="service__item">
+              <a class="service__link" href="">
+                <div class="service__block">
                   <img
-                    class="service-jpg"
+                    class="service__jpg"
                     src="./images/portfoliofoto/tehnokrak.jpg"
                     alt="ноутбук на котором открыт Веб-сайт"
                     width="370"
@@ -106,18 +106,18 @@
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-                <div class="service-jpg-style">
-                  <h3 class="service-title">Технокряк</h3>
-                  <p class="service-text">Веб-сайт</p>
+                <div class="service__jpg-style">
+                  <h3 class="service__title">Технокряк</h3>
+                  <p class="service__text">Веб-сайт</p>
                 </div>
               </a>
             </li>
 
-            <li class="service-item">
-              <a class="service-link" href="">
-                <div class="jpg-product">
+            <li class="service__item">
+              <a class="service__link" href="">
+                <div class="service__block">
                   <img
-                    class="service-jpg"
+                    class="service__jpg"
                     src="./images/portfoliofoto/new-orlean.jpg"
                     alt="фото баскетбольной команды"
                     width="370"
@@ -129,21 +129,21 @@
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-                <div class="service-jpg-style">
-                  <h3 class="service-title">
+                <div class="service__jpg-style">
+                  <h3 class="service__title">
                     Постер
                     <span lang="en">New Orlean vs Golden Star</span>
                   </h3>
-                  <p class="service-text">Дизайн</p>
+                  <p class="service__text">Дизайн</p>
                 </div>
               </a>
             </li>
 
-            <li class="service-item">
-              <a class="service-link" href="">
-                <div class="jpg-product">
+            <li class="service__item">
+              <a class="service__link" href="">
+                <div class="service__block">
                   <img
-                    class="service-jpg"
+                    class="service__jpg"
                     src="./images/portfoliofoto/seafood.jpg"
                     alt="логотип рыбного ресторана"
                     width="370"
@@ -155,21 +155,21 @@
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-                <div class="service-jpg-style">
-                  <h3 class="service-title">
+                <div class="service__jpg-style">
+                  <h3 class="service__title">
                     Ресторан
                     <span lang="en">Seafood</span>
                   </h3>
-                  <p class="service-text">Приложение</p>
+                  <p class="service__text">Приложение</p>
                 </div>
               </a>
             </li>
 
-            <li class="service-item">
-              <a class="service-link" href="">
-                <div class="jpg-product">
+            <li class="service__item">
+              <a class="service__link" href="">
+                <div class="service__block">
                   <img
-                    class="service-jpg"
+                    class="service__jpg"
                     src="./images/portfoliofoto/prime.jpg"
                     alt="фото наушников"
                     width="370"
@@ -181,21 +181,21 @@
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-                <div class="service-jpg-style">
-                  <h3 class="service-title">
+                <div class="service__jpg-style">
+                  <h3 class="service__title">
                     Проект
                     <span lang="en">Prime</span>
                   </h3>
-                  <p class="service-text">Маркетинг</p>
+                  <p class="service__text">Маркетинг</p>
                 </div>
               </a>
             </li>
 
-            <li class="service-item">
-              <a class="service-link" href="">
-                <div class="jpg-product">
+            <li class="service__item">
+              <a class="service__link" href="">
+                <div class="service__block">
                   <img
-                    class="service-jpg"
+                    class="service__jpg"
                     src="./images/portfoliofoto/boxes.jpg"
                     alt="фото коробок"
                     width="370"
@@ -207,21 +207,21 @@
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-                <div class="service-jpg-style">
-                  <h3 class="service-title">
+                <div class="service__jpg-style">
+                  <h3 class="service__title">
                     Проект
                     <span lang="en">Boxes</span>
                   </h3>
-                  <p class="service-text">Приложение</p>
+                  <p class="service__text">Приложение</p>
                 </div>
               </a>
             </li>
 
-            <li class="service-item">
-              <a class="service-link" href="">
-                <div class="jpg-product">
+            <li class="service__item">
+              <a class="service__link" href="">
+                <div class="service__block">
                   <img
-                    class="service-jpg"
+                    class="service__jpg"
                     src="./images/portfoliofoto/inspiration.jpg"
                     alt="фото монитора компьютера"
                     width="370"
@@ -233,20 +233,20 @@
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-                <div class="service-jpg-style">
-                  <h3 class="service-title" lang="en">
+                <div class="service__jpg-style">
+                  <h3 class="service__title" lang="en">
                     Inspiration has no Borders
                   </h3>
-                  <p class="service-text">Веб-сайт</p>
+                  <p class="service__text">Веб-сайт</p>
                 </div>
               </a>
             </li>
 
-            <li class="service-item">
-              <a class="service-link" href="">
-                <div class="jpg-product">
+            <li class="service__item">
+              <a class="service__link" href="">
+                <div class="service__block">
                   <img
-                    class="service-jpg"
+                    class="service__jpg"
                     src="./images/portfoliofoto/limited-edition.jpg"
                     alt="фото открытой книги"
                     width="370"
@@ -258,21 +258,21 @@
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-                <div class="service-jpg-style">
-                  <h3 class="service-title">
+                <div class="service__jpg-style">
+                  <h3 class="service__title">
                     Издание
                     <span lang="en">Limited Edition</span>
                   </h3>
-                  <p class="service-text">Дизайн</p>
+                  <p class="service__text">Дизайн</p>
                 </div>
               </a>
             </li>
 
-            <li class="service-item">
-              <a class="service-link" href="">
-                <div class="jpg-product">
+            <li class="service__item">
+              <a class="service__link" href="">
+                <div class="service__block">
                   <img
-                    class="service-jpg"
+                    class="service__jpg"
                     src="./images/portfoliofoto/lab.jpg"
                     alt="фото этикетки"
                     width="370"
@@ -284,18 +284,18 @@
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-                <div class="service-jpg-style">
-                  <h3 class="service-title">Проект LAB</h3>
-                  <p class="service-text">Маркетинг</p>
+                <div class="service__jpg-style">
+                  <h3 class="service__title">Проект LAB</h3>
+                  <p class="service__text">Маркетинг</p>
                 </div>
               </a>
             </li>
 
-            <li class="service-item">
-              <a class="service-link" href="">
-                <div class="jpg-product">
+            <li class="service__item">
+              <a class="service__link" href="">
+                <div class="service__block">
                   <img
-                    class="service-jpg"
+                    class="service__jpg"
                     src="./images/portfoliofoto/growing-business.jpg"
                     alt="человек раьотает за ноутом"
                     width="370"
@@ -307,9 +307,9 @@
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-                <div class="service-jpg-style">
-                  <h3 class="service-title" lang="en">Growing Business</h3>
-                  <p class="service-text">Приложение</p>
+                <div class="service__jpg-style">
+                  <h3 class="service__title" lang="en">Growing Business</h3>
+                  <p class="service__text">Приложение</p>
                 </div>
               </a>
             </li>
